Revision history for Perl extension WWW::GoKGS.

0.12 Jun 23rd, 2014

  - WWW::GoKGS#user_agent defaults to LWP::RobotUA
    to avoid overloading the KGS server, while you can still set
    your own user agent.
  - Add #from which is used to construct LWP::RobotUA object.
    This attribute is required.

0.11 Jun 22nd, 2014

  [DOCUMENTATION]

  - Add "ENVIRONMENTAL VARIABLES" to POD

0.10 Jun 16th, 2014

  - Add LICENSE file
  - Add "paranoid" tests to author tests

0.09 Jun 15th, 2014

  - Switch to Module::Build
  - Add author tests
  - Tests require Time::Piece
  - Remove t/20_static.t since dynamic tests are run by Travis CI:
      https://travis-ci.org/anazawa/p5-WWW-GoKGS

0.08 Jun 13th, 2014

  [BUGFIX]

    - Parse KGS dates such as "2/13/14 12:14 AM" properly

0.07 Jun 12th, 2014

  - Require Scalar::Util and String::CamelCase
  - Add the following class methods:
      * mk_accessors
      * accessor_name_for
      * builder_name_for
      * make_accessor
  - Add the following instance methods:
      * get_scraper
      * set_scraper
  - The following attributes become 'rw':
      * game_archives
      * top100
      * tourn_list
      * tourn_info
      * tourn_entrants
      * tourn_games

0.06 Jun 10th, 2014

  - Add ACKNOWLEDGE to document

0.05 Jun 8th, 2014

  - Add examples/gokgs.psgi
  - Add "use warnings FATAL => 'all'" to scrapers

0.04 Jun 7th, 2014

   - Add Scraper#get_filter, #add_filter and #run_filter
   - Scraper#scrape throws an exception if warnings are caught

  [INCOMPATIBLE CHANGES]

    - Remove GoKGS#result_filter
    - Remove Scraper::GameArchives#date_filter and #result_filter
    - Remove Scraper::TournGames#date_filter and #result_filter
    - Remove Scraper::TournInfo#date_filter and #html_filter
    - Remove Scraper::TournEntrants#date_filter

0.03 Jun 6th, 2014

  - improve documentation

  [BUGFIX]

    - Scraper::TournGames#scrape parses "Bye" properly
      ($bye->{type} was invalid)

0.02 Jun 5th, 2014
